--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -89,6 +89,11 @@ libcommon_internal_la_SOURCES += \
         common/solaris_errno.cc
 endif
 
+if AIX
+libcommon_internal_la_SOURCES += \
+        common/aix_errno.cc
+endif
+
 if WITH_RBD
 if LINUX
 libcommon_internal_la_SOURCES += \
