ceph.spec.in: use %tmpfiles_create macro
Ensure the macro is defined, and use it to placate the relevant openSUSE
RPMLINT check.

Drop --prefix=/run/ceph (introduced by 477bb064) because we now supply the
configuration file on the systemd-tmpfiles command line. (We don't need to run
systemd-tmpfiles on all files in /usr/lib/tmpfiles.d/ - just on ours.)

Signed-off-by: Nathan Cutler <ncutler@suse.com>

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -43,6 +43,7 @@ restorecon -R /var/log/ceph > /dev/null 2>&1;
 # /var/run/ceph.
 %if 0%{?fedora} || 0%{?rhel} >= 7 || 0%{?suse_version} >= 1210
 %global _with_systemd 1
+%{!?tmpfiles_create: %global tmpfiles_create systemd-tmpfiles --create}
 %endif
 
 # LTTng-UST enabled on Fedora, RHEL 6, and SLES 12
@@ -935,7 +936,7 @@ exit 0
 
 %post -n ceph-common
 %if 0%{?_with_systemd}
-systemd-tmpfiles --create --prefix=/run/ceph
+%tmpfiles_create %{_tmpfilesdir}/ceph-common.conf
 %endif
 
 %postun -n ceph-common
