Allow custom cluster name
Allow custom cluster name set in  /etc/sysconfig/ceph /etc/default/ceph e.g. cluster=CUSTOMNAME

--- a/src/init-ceph.in
+++ b/src/init-ceph.in
@@ -124,6 +124,8 @@ stop_daemon() {
 
 ## command line options
 options=
+[ -e /etc/sysconfig/ceph ] && . /etc/sysconfig/ceph
+[ -e /etc/default/ceph ] && . /etc/sysconfig/ceph
 
 OPTS=$(getopt -n 'init-ceph' -o 'hvam:c:' -l 'help,verbose,valgrind,novalgrind,allhosts,restart,norestart,btrfs,nobtrfs,fsmount,nofsmount,btrfsumount,fsumount,conf:,cluster:,hostname:' -- "$@")
 if [ $? != 0 ]
