--- a/teuthology/openstack/openstack-basic.yaml
+++ b/teuthology/openstack/openstack-basic.yaml
@@ -8,4 +8,8 @@ overrides:
         mon lease ack timeout: 25
   s3tests:
     idle_timeout: 1200
+  ceph-fuse:
+    client.0:
+       mount_wait: 60
+       mount_timeout: 120
 archive-on-error: true
