--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -508,7 +508,7 @@ endif()
 option(WITH_SYSTEM_BOOST "require and build with system Boost" OFF)
 
 set(BOOST_COMPONENTS
-	container thread system regex random program_options date_time iostreams)
+	container thread system regex random program_options date_time iostreams coroutine context)
 if(WITH_MGR)
 	list(APPEND BOOST_COMPONENTS python)
 endif()
