qa/suites/upgrade/jewel-x: fix upgrade order; fix split grouping
Signed-off-by: Sage Weil <sage@redhat.com>
(cherry picked from commit 269eafb2027ea6dfbad730f6fb1481a1cabc5e60)

Conflicts:
    stress-split/6-kraken.yaml (do not delete)
    stress-split/6-luminous.yaml (do not add)
    stress-split-erasure-code/6-kraken.yaml (do not delete)
    stress-split-erasure-code/6-luminous.yaml (do not add)

--- a/qa/suites/upgrade/jewel-x/stress-split/3-thrash/default.yaml
+++ b/qa/suites/upgrade/jewel-x/stress-split/3-thrash/default.yaml
@@ -9,6 +9,9 @@ overrides:
     - objects unfound and apparently lost
     - log bound mismatch
 tasks:
+- parallel:
+  - stress-tasks
+stress-tasks:
 - thrashosds:
     timeout: 1200
     chance_pgnum_grow: 1
