--- a/qa/suites/upgrade/jewel-x/stress-split/4-workload/rbd-cls.yaml
+++ b/qa/suites/upgrade/jewel-x/stress-split/4-workload/rbd-cls.yaml
@@ -1,9 +1,9 @@
 meta:
 - desc: |
    run basic cls tests for rbd
-tasks:
+stress-tasks:
 - workunit:
-    branch: jewel
+    branch: kraken
     clients:
       client.0:
         - cls/test_cls_rbd.sh
