--- a/qa/suites/upgrade/jewel-x/stress-split/4-workload/snaps-few-objects.yaml
+++ b/qa/suites/upgrade/jewel-x/stress-split/4-workload/snaps-few-objects.yaml
@@ -1,7 +1,7 @@
 meta:
 - desc: |
    randomized correctness test for rados operations on a replicated pool with snapshot operations
-tasks:
+stress-tasks:
 - full_sequential:
   - rados:
       clients: [client.0]
