--- a/qa/suites/upgrade/jewel-x/stress-split/4-workload/rbd-import-export.yaml
+++ b/qa/suites/upgrade/jewel-x/stress-split/4-workload/rbd-import-export.yaml
@@ -1,9 +1,9 @@
 meta:
 - desc: |
    run basic import/export cli tests for rbd
-tasks:
+stress-tasks:
 - workunit:
-    branch: jewel
+    branch: kraken
     clients:
       client.0:
         - rbd/import_export.sh
