--- a/qa/suites/upgrade/jewel-x/stress-split/4-workload/rbd_api.yaml
+++ b/qa/suites/upgrade/jewel-x/stress-split/4-workload/rbd_api.yaml
@@ -1,9 +1,9 @@
 meta:
 - desc: |
    librbd C and C++ api tests
-tasks:
+stress-tasks:
 - workunit:
-     branch: jewel
+     branch: kraken
      clients:
         client.0:
            - rbd/test_librbd.sh
