--- a/qa/suites/upgrade/jewel-x/stress-split/7-final-workload/rbd-python.yaml
+++ b/qa/suites/upgrade/jewel-x/stress-split/7-final-workload/rbd-python.yaml
@@ -3,7 +3,7 @@ meta:
    librbd python api tests
 tasks:
 - workunit:
-    branch: jewel
+    branch: kraken
     clients:
       client.0:
         - rbd/test_librbd_python.sh
