--- a/qa/suites/upgrade/jewel-x/stress-split/4-workload/rbd-cls.yaml
+++ b/qa/suites/upgrade/jewel-x/stress-split/4-workload/rbd-cls.yaml
@@ -3,7 +3,7 @@ meta:
    run basic cls tests for rbd
 stress-tasks:
 - workunit:
-    branch: kraken
+    branch: jewel
     clients:
       client.0:
         - cls/test_cls_rbd.sh
