--- a/qa/suites/upgrade/jewel-x/stress-split/4-workload/rbd_api.yaml
+++ b/qa/suites/upgrade/jewel-x/stress-split/4-workload/rbd_api.yaml
@@ -3,7 +3,7 @@ meta:
    librbd C and C++ api tests
 stress-tasks:
 - workunit:
-     branch: kraken
+     branch: jewel
      clients:
         client.0:
            - rbd/test_librbd.sh
