--- a/qa/suites/upgrade/jewel-x/stress-split-erasure-code/4-workload/ec-rados-default.yaml
+++ b/qa/suites/upgrade/jewel-x/stress-split-erasure-code/4-workload/ec-rados-default.yaml
@@ -1,7 +1,7 @@
 meta:
 - desc: |
    randomized correctness test for rados operations on an erasure coded pool
-tasks:
+stress-tasks:
   - rados:
       clients: [client.0]
       ops: 4000
