qa/suites/upgrade/jewel-x: do not thrash cluster full during upgrade
The mon command varies.

Signed-off-by: Sage Weil <sage@redhat.com>
(cherry picked from commit 39fdc53fe5f33678fbbd00cf8810b6d523d0040c)

--- a/qa/suites/upgrade/jewel-x/stress-split-erasure-code/3-thrash/default.yaml
+++ b/qa/suites/upgrade/jewel-x/stress-split-erasure-code/3-thrash/default.yaml
@@ -17,4 +17,5 @@ stress-tasks:
     chance_pgnum_grow: 1
     chance_pgpnum_fix: 1
     min_in: 4
+    chance_thrash_cluster_full: 0
 - print: "**** done thrashosds 3-thrash"
