--- a/qa/suites/upgrade/jewel-x/stress-split/3-thrash/default.yaml
+++ b/qa/suites/upgrade/jewel-x/stress-split/3-thrash/default.yaml
@@ -16,4 +16,5 @@ stress-tasks:
     timeout: 1200
     chance_pgnum_grow: 1
     chance_pgpnum_fix: 1
+    chance_thrash_cluster_full: 0
 - print: "**** done thrashosds 3-thrash"
