--- a/src/rgw/CMakeLists.txt
+++ b/src/rgw/CMakeLists.txt
@@ -73,6 +73,7 @@ set(rgw_a_srcs
   rgw_data_sync.cc
   rgw_sync_module.cc
   rgw_sync_module_es.cc
+  rgw_sync_module_es_rest.cc
   rgw_sync_module_log.cc
   rgw_period_history.cc
   rgw_period_puller.cc
