--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -980,6 +980,7 @@ rm -rf %{buildroot}
 %attr(750,ceph,ceph) %dir %{_localstatedir}/lib/ceph/bootstrap-mds
 %attr(750,ceph,ceph) %dir %{_localstatedir}/lib/ceph/bootstrap-rgw
 %attr(750,ceph,ceph) %dir %{_localstatedir}/lib/ceph/bootstrap-mgr
+%attr(755,root,root) %{_libexecdir}/ceph/systemd-rdma-settings.sh
 
 %post base
 /sbin/ldconfig
