tests: upgrade/client-upgrade/infernalis-client-x install from SHA1
"branch: infernalis" does not pick up a fix that was added after the last
official infernalis release, so use an explicit SHA1 instead.

Fixes: http://tracker.ceph.com/issues/19080
Signed-off-by: Nathan Cutler <ncutler@suse.com>

--- a/qa/suites/upgrade/client-upgrade/infernalis-client-x/basic/1-install/infernalis-client-x.yaml
+++ b/qa/suites/upgrade/client-upgrade/infernalis-client-x/basic/1-install/infernalis-client-x.yaml
@@ -1,6 +1,6 @@
 tasks:
 - install:
-    branch: infernalis 
+    ref: baf17c90980f3c61f75775f561ced5b2a1d2141c
 - print: "**** done install infernalis"
 upgrade_workload:
   sequential:
