--- a/qa/suites/upgrade/hammer-jewel-x/parallel/0-cluster/start.yaml
+++ b/qa/suites/upgrade/hammer-jewel-x/parallel/0-cluster/start.yaml
@@ -17,3 +17,7 @@ roles:
   - osd.3
 - - client.0
   - client.1
+openstack:
+  - volumes: # attached to each instance
+      count: 3
+      size: 30 # GB
