--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -312,12 +312,16 @@ Group:          System/Filesystems
 %endif
 Requires:       ceph-base = %{epoch}:%{version}-%{release}
 %if 0%{?fedora} || 0%{?rhel}
-Requires:      python-cherrypy
+Requires:       python-cherrypy
+Requires:       pyOpenSSL
+Requires:       python-werkzeug
 %endif
 %if 0%{?suse_version}
 Requires: 	python-CherryPy
+Requires:       python-pyOpenSSL
+Requires:       python-Werkzeug
 %endif
-
+Requires:       python-pecan
 %description mgr
 ceph-mgr enables python modules that provide services (such as the REST
 module derived from Calamari) and expose CLI hooks.  ceph-mgr gathers
