qa: add log whitelists for MDS health messages
Now that we send these to the cluster log, we must
whitelist them in the tests that exercise those
unhealthy states.

Fixes: http://tracker.ceph.com/issues/19551
Signed-off-by: John Spray <john.spray@redhat.com>

--- a/qa/suites/fs/recovery/tasks/data-scan.yaml
+++ b/qa/suites/fs/recovery/tasks/data-scan.yaml
@@ -8,6 +8,8 @@ overrides:
       - error reading sessionmap
       - unmatched fragstat
       - was unreadable, recreating it now
+      - Scrub error on inode
+      - Metadata damage detected
 
 tasks:
   - cephfs_test_runner:
