--- a/qa/suites/rados/thrash/z-require-luminous/at-end.yaml
+++ b/qa/suites/rados/thrash/z-require-luminous/at-end.yaml
@@ -10,3 +10,5 @@ overrides:
     conf:
       global:
         mon debug no require luminous: true
+  thrashosds:
+    chance_thrash_cluster_full: 0
