--- a/src/rgw/CMakeLists.txt
+++ b/src/rgw/CMakeLists.txt
@@ -172,8 +172,8 @@ add_library(radosgw_a STATIC ${radosgw_srcs}
 target_link_libraries(radosgw_a rgw_a ${SSL_LIBRARIES})
 if(WITH_RADOSGW_BEAST_FRONTEND)
   target_link_libraries(radosgw_a
-    ${Boost_COROUTINE_LIBRARY}
-    ${Boost_CONTEXT_LIBRARY})
+    Boost::coroutine
+    Boost::context)
 endif()
 
 add_executable(radosgw rgw_main.cc)
