Use pip-tools to manage dependencies
After yet another instance of pip failing to resolve dependencies, I
think it's time to pin everything. The pip-tools utilities provide a
simple way to pin libraries and update them when necessary.

Signed-off-by: Zack Cerza <zack@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -7,10 +7,11 @@ passenv = HOME
 sitepackages=True
 deps=
   -r{toxinidir}/requirements.txt
+  pytest
+  pytest-capturelog
   mock
   fudge
   nose
-  pytest-capturelog
   pytest-cov==1.6
   coverage==3.7.1
 
@@ -23,6 +24,8 @@ passenv = HOME OS_REGION_NAME OS_AUTH_URL OS_TENANT_ID OS_TENANT_NAME OS_PASSWOR
 sitepackages=True
 deps=
   -r{toxinidir}/requirements.txt
+  pytest
+  pytest-capturelog
   mock
   fudge
   nose
@@ -42,7 +45,12 @@ commands=flake8 --select=F,E9 {posargs:teuthology scripts}
 install_command = pip install --upgrade {opts} {packages}
 basepython=python
 changedir=docs
-deps=sphinx
+deps=
+  -r{toxinidir}/requirements.txt
+  sphinx
+  pytest
+  pytest-capturelog
+  mock
 commands=
     sphinx-apidoc -f -o . ../teuthology ../teuthology/test ../teuthology/orchestra/test ../teuthology/task/test
     sphinx-build -b html -d {envtmpdir}/doctrees .  {envtmpdir}/html
@@ -53,8 +61,9 @@ passenv = HOME OS_REGION_NAME OS_AUTH_URL OS_TENANT_ID OS_TENANT_NAME OS_PASSWOR
 sitepackages=True
 deps=
   -r{toxinidir}/requirements.txt
-  mock
+  pytest
   pytest-capturelog
+  mock
 
 commands=py.test -v {posargs:teuthology/openstack/test/test_openstack.py}
 basepython=python2.7
@@ -64,6 +73,7 @@ passenv = HOME OS_REGION_NAME OS_AUTH_URL OS_TENANT_ID OS_TENANT_NAME OS_PASSWOR
 basepython=python2
 deps=
     -r{toxinidir}/requirements.txt
+    pytest
     mock
 
 commands=
