debian: package ceph.logroate properly
see also "man dh_installlogrotate"

Fixes: http://tracker.ceph.com/issues/19390
Signed-off-by: Kefu Chai <kchai@redhat.com>
(cherry picked from commit 17ca501fe8927d541d50a502da53a4d7628d2b4a)

--- a/debian/rules
+++ b/debian/rules
@@ -28,7 +28,6 @@ override_dh_auto_configure:
 override_dh_auto_build:
 	dh_auto_build --buildsystem=cmake
 	cp src/init-radosgw debian/radosgw.init
-	cp src/logrotate.conf debian/ceph.logrotate
 
 override_dh_auto_clean:
 	dh_auto_clean --buildsystem=cmake
@@ -49,7 +48,8 @@ override_dh_installdocs:
 	dh_installdocs -a --all ChangeLog
 
 override_dh_installlogrotate:
-	dh_installlogrotate -pceph-base --name ceph
+	cp src/logrotate.conf debian/ceph-base.ceph.logrotate
+	dh_installlogrotate -pceph-base --name=ceph
 
 override_dh_installinit:
 	# dh_installinit is only set up to handle one upstart script
