rbd-mirror: renamed Replayer to PoolReplayer
This is a stepping stone to support multiple peers within a single
pool.

Signed-off-by: Jason Dillaman <dillaman@redhat.com>

--- a/src/tools/rbd_mirror/CMakeLists.txt
+++ b/src/tools/rbd_mirror/CMakeLists.txt
@@ -14,8 +14,8 @@ set(rbd_mirror_internal
   LeaderWatcher.cc
   Mirror.cc
   MirrorStatusWatcher.cc
+  PoolReplayer.cc
   PoolWatcher.cc
-  Replayer.cc
   Threads.cc
   types.cc
   image_replayer/BootstrapRequest.cc
