rbd: add subcommand of ns for namespace operations
Signed-off-by: Dongsheng Yang <dongsheng.yang@easystack.cn>

--- a/src/tools/rbd/CMakeLists.txt
+++ b/src/tools/rbd/CMakeLists.txt
@@ -27,6 +27,7 @@ set(rbd_srcs
   action/MirrorPool.cc
   action/MirrorImage.cc
   action/Nbd.cc
+  action/Namespace.cc
   action/ObjectMap.cc
   action/Remove.cc
   action/Rename.cc
