--- a/qa/suites/rados/thrash/thrashers/morepggrow.yaml
+++ b/qa/suites/rados/thrash/thrashers/morepggrow.yaml
@@ -1,6 +1,5 @@
-tasks:
-- install:
-- ceph:
+overrides:
+  ceph:
     conf:
       osd:
         osd scrub min interval: 60
@@ -13,6 +12,7 @@ tasks:
     log-whitelist:
     - wrongly marked me down
     - objects unfound and apparently lost
+tasks:
 - thrashosds:
     timeout: 1200
     chance_pgnum_grow: 3
