qa/suites/rados: switch require-luminous facet to use full_sequential_finally
This lets us run multiple cleanup steps right before ceph
teardown.

Note that we drop the facet from multimon/ because it
doesn't factor out cluster creation before this step
properly.  That's fine because the require_luminous
cleanup shouldn't be related to the multimon tests.

Signed-off-by: Sage Weil <sage@redhat.com>

--- a/qa/suites/rados/thrash/d-require-luminous/at-end.yaml
+++ b/qa/suites/rados/thrash/d-require-luminous/at-end.yaml
@@ -2,9 +2,10 @@
 # the end of the test run, then do a final scrub (to convert any
 # legacy snapsets), and verify we are healthy.
 tasks:
-- exec_on_cleanup:
-    mon.a:
-      - ceph osd set require_luminous_osds
+- full_sequential_finally:
+  - exec:
+      mon.a:
+        - ceph osd set require_luminous_osds
 overrides:
   ceph:
     conf:
