debian: package crypto plugins only on amd64
currently, only plugin based on isa-l is installed. archs other than
amd64 will not have this directory or the plugin(s) residing in it.
hence dh_install will fail when trying to copy nonexistence file/dir.

* debian/ceph-common.install: chmod +x, and only install crypto on amd64
  so dh_install can filter the install list using dh-exec
* debian/control: depends on dh-exec now. dh-exec v0.13 introduces support
  for filtering based on architecture. see dh-exec's changelog for more
  details. but trusty only offers dh-exec v0.12. so do not require ">=
  0.13) at this moment.

Signed-off-by: Kefu Chai <kchai@redhat.com>

--- a/debian/control
+++ b/debian/control
@@ -15,6 +15,7 @@ Build-Depends: bc,
                cython,
                cython3,
                debhelper (>= 9),
+               dh-exec,
                dh-python,
 	       dh-systemd,
                default-jdk,
