This PR is about the implementation of S3 bucket logging for RGW. More details: http://docs.aws.amazon.com/AmazonS3/latest/API/RESTBucketPUTlogging.html

--- a/src/rgw/CMakeLists.txt
+++ b/src/rgw/CMakeLists.txt
@@ -53,6 +53,8 @@ set(rgw_a_srcs
   rgw_log.cc
   rgw_lc.cc
   rgw_lc_s3.cc
+  rgw_bl.cc
+  rgw_bl_s3.cc
   rgw_metadata.cc
   rgw_multi.cc
   rgw_multi_del.cc
