Greatly simplify cmake files. Remove commented out cruft. Make tests all the time. Call add_test with TARGET_FILE directive, so projects that include dmclock can find the tests where they expect them.
Signed-off-by: J. Eric Ivancich <ivancich@redhat.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,19 +4,6 @@ set(CMAKE_CXX_FLAGS "-std=c++11 -Wno-write-strings ${CMAKE_CXX_FLAGS}")
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")
 
-if(CMAKE_BUILD_TYPE MATCHES Release)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Wno-write-strings")
-elseif(CMAKE_BUILD_TYPE MATCHES Debug)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0 -Wno-write-strings")
-else()
-  message(STATUS "build type '${CMAKE_BUILD_TYPE}' is neither 'Release' nor 'Debug'; assuming Debug")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0 -Wno-write-strings")
-endif()
-
-if(PROFILE)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DPROFILE")
-endif()
-
 if(DO_NOT_DELAY_TAG_CALC)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDO_NOT_DELAY_TAG_CALC")
 endif()
@@ -29,25 +16,17 @@ if(K_WAY_HEAP)
   endif()
 endif()
 
-add_subdirectory(src)
-add_subdirectory(sim)
-
-function(dmclock_config_testing)
-  set(CMAKE_CTEST_COMMAND ctest -V)
-  add_custom_target(dmclock-check COMMAND ${CMAKE_CTEST_COMMAND})
-  enable_testing()
-  include_directories(${GTEST_INCLUDES})
-  add_subdirectory(test)
-endfunction()
-
-if (TARGET gtest AND TARGET gtest_main)
-  dmclock_config_testing()
-else()
+if (NOT(TARGET gtest AND TARGET gtest_main))
   find_package(gtest REQUIRED)
-  dmclock_config_testing()
+  include_directories(${GTEST_INCLUDE_DIRS})
 endif()
 
 find_package(Boost REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
 
+add_subdirectory(src)
+add_subdirectory(sim)
 add_subdirectory(support)
+
+enable_testing()
+add_subdirectory(test)
