--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,3 @@
-# TO REMOVE include_directories(${GTEST_INCLUDE_DIR})
 include_directories(../src)
 include_directories(../support/src)
 include_directories(../sim/src)
@@ -16,7 +15,7 @@ set_source_files_properties(${core_srcs} ${test_srcs}
   COMPILE_FLAGS "${local_flags}"
   )
 
-add_executable(dmclock-tests EXCLUDE_FROM_ALL ${test_srcs} ${support_srcs})
+add_executable(dmclock-tests ${test_srcs} ${support_srcs})
 
 if (TARGET gtest AND TARGET gtest_main)
   add_dependencies(dmclock-tests gtest gtest_main)
@@ -30,16 +29,7 @@ else()
     LINK_PRIVATE $<TARGET_FILE:dmclock> pthread ${GTEST_LIBRARY} ${GTEST_MAIN_LIBRARY})
 endif()
   
+add_dependencies(dmclock-tests dmclock)
 
-add_dependencies(dmclock-tests dmclock dmclock-data-struct-tests)
-
-# for every argument, adds a test with that name, using it as a gtest filter
-function(dmclock_make_tests)
-  foreach(targ ${ARGN})
-    add_test(NAME ${targ} COMMAND dmclock-tests --gtest_filter=${targ}.*)
-  endforeach()
-endfunction()
-
-dmclock_make_tests(dmclock_server dmclock_server_pull dmclock_client test_client)
-
-add_dependencies(dmclock-check dmclock-tests)
+add_test(NAME dmclock-tests
+  COMMAND $<TARGET_FILE:dmclock-tests>)
