CMakeLists.txt: WITH_BLKIN off for now
We are unconditionally linking lttng-ust, which make selinux complain. We
should either

 - fix selinux rules and unconditionally link
 - dlopen at runtime based on an option (like we do for the current
   tracepoints)
 - ???

Signed-off-by: Sage Weil <sage@redhat.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -337,7 +337,7 @@ find_package(dpdk)
 set(HAVE_DPDK ${DPDK_FOUND})
 endif(WITH_DPDK)
 
-option(WITH_BLKIN "Use blkin to emit LTTng tracepoints for Zipkin" ON)
+option(WITH_BLKIN "Use blkin to emit LTTng tracepoints for Zipkin" OFF)
 if(WITH_BLKIN)
   set(BLKIN_LIBRARIES blkin lttng-ust)
   include_directories(src/blkin/blkin-lib)
